# rust-editorconfig

./: .travis.yml  Cargo.toml  LICENSE  README.md  test_skip_regex.txt
src/: ini.rs  lib.rs  main.rs
test_files/non_root_editorconfig/foo/: .editorconfig
